--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".activity.PostPhotoActivity"/>
         <activity android:name=".activity.TakePhotoActivity2"/>
         <activity android:name=".activity.TakePhotoActivity"/>
+        <activity android:name=".acivityLogin.ActivityMainLogin"/>
     </application>
 
 </manifest>
