--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,15 @@ android {
         }
     }
     repositories {
-        maven {
-            url "https://s3.amazonaws.com/repo.commonsware.com"
-
-        }
+        jcenter()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://repo.commonsware.com.s3.amazonaws.com" }
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
+    }
+    dexOptions {
+        preDexLibraries = false
     }
 }
 
@@ -34,10 +39,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup:otto:1.3.5'
     compile 'com.android.support:design:23.0.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.inthecheesefactory.thecheeselibrary:stated-fragment-support-v4:0.9.3'
     compile 'com.github.talenguyen:prettysharedpreferences:1.0.2'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.squareup.picasso:picasso:2.5.0'
@@ -45,4 +50,6 @@ dependencies {
     compile project(':labeiui')
     compile project(':library')
     compile project(':cvlibrary')
+    compile 'org.parceler:parceler-api:0.2.10'
+    provided 'org.parceler:parceler:0.2.10'
 }
