--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,35 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="natuan.org.androiddesigntablayout" >
+    package="natuan.org.androiddesigntablayout">
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".acivityLogin.MainLogin"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".acivityLogin.MainActivityDisplayFragmentLogin"/>
-        <activity android:name=".activity.MainActivityTap"/>
-        <activity android:name=".MainActivityChat"/>
-        <activity android:name=".activity.PostPhotoActivity"/>
-        <activity android:name=".activity.TakePhotoActivity2"/>
-        <activity android:name=".activity.TakePhotoActivity"/>
-        <activity android:name=".acivityLogin.ActivityMainLogin"/>
+        <activity android:name=".acivityLogin.MainActivityDisplayFragmentLogin" />
+        <activity android:name=".activity.MainActivityTap" />
+        <activity android:name=".MainActivityChat" />
+        <activity android:name=".activity.PostPhotoActivity" />
+        <activity android:name=".activity.TakePhotoActivity2" />
+        <activity android:name=".activity.TakePhotoActivity" />
+        <activity android:name=".acivityLogin.ActivityMainLogin" />
+        <activity android:name=".activity.ActivitySetting" />
+        <activity
+            android:name=".activity.MianHomMe"
+            android:label="@string/title_activity_mian_hom_me"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".activity.MianHomGroup"/>
+        <activity android:name=".fragments.fragmentTattooStore.TattooDetailActivity"/>
     </application>
 
 </manifest>
