--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.googlecode.flickrj-android:flickrj-android:2.1.0'
     compile 'org.slf4j:slf4j-android:1.7.7'
-    compile 'com.alexvasilkov:events:0.4.0'
     compile project(':lib')
     compile 'me.iwf.photopicker:PhotoPicker:0.2.8@aar'
     compile project(':libraryspinner')
     compile 'com.weiwangcn.betterspinner:library:1.1.0'
+    compile files('libs/prettytime-3.2.7.Final.jar')
 }
