--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "natuan.org.androiddesigntablayout"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
+        versionCode 11
+        versionName "1.1"
 
     }
     buildTypes {
@@ -43,32 +43,38 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     //    compile rootProject.ext.facebookSDK
+//    compile files('libs/prettytime-3.2.7.Final.jar')
+//    compile files('libs/android-query-full.0.26.7.jar')
+    compile project(':labeiui')
+    compile project(':librarygestureview')
+    compile project(':chat')
+
     // parse
     compile rootProject.ext.facebookSDK
     compile project(':ParseLoginUI')
     compile files(rootProject.ext.parsePath)
     compile files(rootProject.ext.parseFacebookUtilsPath)
     compile files(rootProject.ext.parseCrashReporting)
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup:otto:1.3.5'
-    compile 'com.android.support:design:23.0.1'
+
+    compile 'org.parceler:parceler-api:0.2.10'
+    provided 'org.parceler:parceler:0.2.10'
+
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.github.talenguyen:prettysharedpreferences:1.0.2'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.squareup.picasso:picasso:2.5.0'
-    compile project(':labeiui')
-    compile 'org.parceler:parceler-api:0.2.10'
-    provided 'org.parceler:parceler:0.2.10'
-    compile project(':librarygestureview')
+
+
     compile 'org.slf4j:slf4j-android:1.7.7'
     compile 'com.weiwangcn.betterspinner:library:1.1.0'
-    compile files('libs/prettytime-3.2.7.Final.jar')
-    compile files('libs/android-query-full.0.26.7.jar')
+
     compile 'me.drakeet.materialdialog:library:1.2.8'
-    //    compile project(':chat')
-    compile project(':chat')
 }
